RegressionTests/TestSuiteExport/reject/missing_semicolon.blade
// EXPECT: fail
// DIAGNOSTICS: UnexpectedToken

cog var x: u32 = 0